[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-rbg-smartseedvariance"
version = "2.2.0"
description = "Advanced seed diversity enhancement for ComfyUI with intelligent noise injection and directional biasing."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
authors = [
  { name = "Ramon Guthrie"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/RamonGuthrie/ComfyUI-RBG-SmartSeedVariance"
"Bug Tracker" = "https://github.com/RamonGuthrie/ComfyUI-RBG-SmartSeedVariance/issues"
